Update project logging, scalafmt, libraries, and cleanup